--- a/style.css
+++ b/style.css
@@ -43,7 +43,25 @@
     background: url("assets/hero.webp") center no-repeat ;
     background-size: cover;
 }
-
+.ps5{
+    height: 100px;
+    width: 500px;
+    background: url("assets/logo.webp");
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: contain;
+    filter:invert(100%);
+    position: absolute;
+    top: 30%;
+    left: 3%;
+}
+.content p{
+    position: relative;
+    top:150px;
+    left: 70px;
+    color: rgb(0, 0, 0);
+    font-size: 16px;
+}
 
 @media  (max-width:600px) {
     .nav .logo{
@@ -61,4 +79,21 @@
         background: url("assets/response-hero.png") center no-repeat;
         background-size: contain;
     }
+    .hero-img {
+        height: 410px;
+    }
+
+    .ps5 {
+        width: 250px;
+        top: 70%;
+        left: 15%;
+        filter: invert(0);
+    }
+
+    .content p {
+        top: 110px;
+        left: 20px;
+        font-size: 12px;
+    }
 }
+    
