--- a/style.css
+++ b/style.css
@@ -84,6 +84,107 @@
     background-size: cover;
 }
 
+/* Section-2 */
+.section-2{
+    width: 100%;
+    height: 70%;
+    padding: 0 100px;
+}
+.grid-box{
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    justify-content: center;
+}
+.small{
+    display: flex;
+    flex-direction:row;
+    gap: 20px;
+    margin: 50px 0;
+}
+.box{
+    height: 400px;
+    width: 100%;
+    background-color: #D9DCE9;
+}
+
+/* Box-1 */
+.box1{
+    width: 100%;
+}
+.big{
+    display: flex;
+    margin-top: 40px;
+}
+.log{
+    height: 90px;
+    width: 100px;
+    background: url("assets/b1-1.webp") center no-repeat;
+    background-size: contain;
+}
+.big-pic{
+    height: auto;
+    width: 90%;
+    background: url("assets/b1.webp") center no-repeat;
+    background-size: cover;
+}
+h4{
+    font-size: 25px;
+    font-weight: bold;
+}
+
+/* Box 2 and 3 */
+.container{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    line-height: 1.5;
+}
+h2,h3{
+    text-align: center;
+    font-size: 25px;
+    font-weight: bold;
+}
+.container p{
+    text-align: center;
+    font-size: 16px;
+    padding-top: 15px;
+}
+
+.box2 .pic{
+    height: 60%;
+    width: 100%;
+    background: url("assets/b2.webp") center no-repeat;
+    background-size: cover;
+}
+.symbol{
+    height: 100px;
+    width: 120px;
+    background: url("assets/b2-2.webp") center no-repeat;
+    background-size: contain;
+    padding: 15px;
+}
+.box2{
+    display: inline;
+    height: 600px;
+}
+.pic{
+    height: 60%;
+    width: 100%;
+    background: url("assets/b3.webp") center no-repeat;
+    background-size: cover;
+}
+.sym3{
+    background: url("assets/b3-3.webp") center no-repeat;
+    background-size: contain;
+}
+.box3{
+    display: inline;
+    height: 600px;
+}
+
+
 @media  (max-width:600px) {
     .nav .logo{
         margin-left: 10px;
@@ -129,7 +230,7 @@
 
     /* Section-1 */
     .section1{
-        height: 300px;
+        height: 700px;
     }
     .section1-content{
         text-align: center;
@@ -151,4 +252,44 @@
         background: url("assets/section1.png") center no-repeat;
         background-size: contain;
     }
+    /* SECTION-2 */
+
+    .section-2 {
+        padding: 0 30px;
+    }
+    .box {
+        height: 420px;
+    }
+    .big{
+        flex-direction: column-reverse;
+        justify-content: start;
+    }
+    h4{
+        padding-top: 20px;
+        font-size: 16px;
+    }
+    .container p{
+        font-size: 12px;
+        padding: 0;
+    }
+    .small {
+        flex-direction: column;
+    }
+    .log {
+        margin-top: 10px;
+        height: 60px;
+        width: 60px;
+    }
+    .big-pic {
+        height: 50%;
+        width: 100%; 
+    }
+    .symbol, .sym3 {
+        width: 60px;
+        height: 70px;
+    }
+    h2,h3{
+        font-size: 16px;
+    }
 }
+
