--- a/style.css
+++ b/style.css
@@ -224,7 +224,41 @@ h2,h3{
     margin-top: 15px;
     font-size: 12px;
 }
+
+/* SECTION-4 */
+.section-4{
+    height: 900px;
+}
+.main-img{
+    height: 700px;
+    background: url("assets/sec4.webp") center no-repeat;
+    background-size: cover;
+}
+.sec4-cont{
+    text-align: center;
+    padding-top: 50px;
+    color: aliceblue;
+}
+.sec4-cont h1{
+    font-size: 38px;
+}
+.sec4-cont p{
+    padding-top: 5px;
+    font-size: 14px;
+}
+
+
+
+
+
+
+
+
+
 @media  (max-width:600px) {
+
+    /* HEADER */
+
     .nav .logo{
         margin-left: 10px;
         height: 40px;
@@ -334,6 +368,7 @@ h2,h3{
     /* SECTION-3 */
 
     .section-3{
+        height: auto;
         padding: 0 30px;
     }
     .sec3-grid{
@@ -361,5 +396,26 @@ h2,h3{
         margin-top: 12px;
         font-size: 12px;
     }
+    /* SECTION-4 */
+
+    .section-4{
+        margin-top: 100px;
+        height: 700px;
+    }
+    .main-img{
+        height: 400px;
+        background-size: cover;
+    }
+    .sec4-cont{
+        padding-top: 20px;
+    }
+    .sec4-cont h1{
+        font-size: 20px;
+    }
+    .sec4-cont p{
+        padding-top: 5px;
+        font-size: 10px;
+    }
+    
 }
 
