--- a/style.css
+++ b/style.css
@@ -348,7 +348,46 @@ h2,h3{
     font-size: 16px;
     color: #7c7d83;
 }
+/* FOOTER */
+footer{
+    height: auto;
+    background-color: #00439c;
+}
+.fot-logo{
+    height: 200px;
+    width: 300px;
+    background: url("assets/footer.png") center no-repeat;
+    background-size: contain;
+    margin-left: 85px;
+}
+.ul-items{
+    border-top: 2px solid rgba(210, 192, 192, 0.437);
+    margin: 0 100px;
+    padding-bottom: 30px;
+    display: flex;
+    justify-content: space-between;
+    color: white;
+    border-bottom: 2px solid rgba(210, 192, 192, 0.437);
+}
+.ul-items li{
+    padding-top: 20px;
+    text-decoration: none;
+    list-style: none;
+    font-size: 15px;
+}
+.ul-items span{
+    color: rgb(208, 225, 225);
+    font-size: 16px;
+    font-weight: 600;
+}
+.sony-logo{
+    height: 150px;
+    width: 300px;
+    background: url("assets/sony.png") center no-repeat;
+    background-size: cover;
+    margin-left: 85px;
 
+}
 @media  (max-width:600px) {
 
     /* HEADER */
@@ -584,6 +623,43 @@ h2,h3{
     }
     .sec6-cont p{
         font-size: 14px;
+    }
+
+    /* FOOTER */
+    footer{
+        height: auto;
+        background-color: #00439c;
+    }
+    .fot-logo{
+        height: 200px;
+        width: 300px;
+        margin-left: 70px;
+    }
+    .ul-items{
+        border-top: 1px solid rgba(210, 192, 192, 0.437);
+        margin: 0 50px;
+        padding-bottom: 30px;
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        color: white;
+        border-bottom: 2px solid rgba(210, 192, 192, 0.437);
+    }
+    .ul-items li{
+        padding-top: 20px;
+        text-decoration: none;
+        list-style: none;
+        font-size: 15px;
+    }
+    .ul-items span{
+        font-size: 20px;
+        font-weight: 600;
+    }
+    .sony-logo{
+        height: 150px;
+        width: 300px;
+        background-size: cover;
+        margin-left: 70px;
+    
     }
 }
 
